<resources>
    <string name="app_name">Travelling</string>
    <string name="title">Tu App de Viajes</string>
    <string name="onboarding">Hola, estamos buscando a millones de usuarios con inquietudes y ganas de viajar. Si eres tú? No lo dudes, accede a nuestra app y descubrirás miles de destinos y facilidades para alquilar coches, ver el tiempo....</string>
    <string name="next">Next</string>
    <string name="home">Upcoming meetups</string>
    <string name="usa">USA, Los Angeles - 2 weeks</string>
    <string name="city">City of Los Angeles</string>
    <string name="madives">Madives - 3 weeks</string>
    <string name="beach">Beach vacation</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="forgot">Forgot password?</string>
    <string name="get">Get Now</string>
    <string name="account">Do you have an account?</string>
    <string name="create">Create Now</string>
    <string name="name">¿Cómo te llamas?</string>
    <string name="apellido">¿Y tu apellido?</string>
    <string name="edad">¿Cuantos años tienes?</string>
    <string name="meapunto">Me apunto</string>
    <string name="politica">Política de privacidad</string>
    <string name="condiciones">Ver condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>